-Fixed OK button on Save Menu

--- a/applications/WebMod/views/default/modeling.html
+++ b/applications/WebMod/views/default/modeling.html
@@ -90,7 +90,7 @@ AAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO
                                     <br>
                                     <div class="btn-group">
                                         <button class="btn btn-primary" type="button" on-click="cancel-menu" style="margin-right:0px;">Cancel</button>
-                                        <button class="btn btn-primary" type="button" on-click="open-model">OK</button>
+                                        <button class="btn btn-primary" type="button" on-click="save-model">OK</button>
                                     </div>
                                 </form>
                             {% /if %}
